Change Log for the qhy project

20140114:
	* add doxygen documentation
	* Linux port
	* autoconf improvements

20140111:
	* project set up

