@@ -4,4 +4,4 @@
 CFLAGS="-Wall -O2 -g"
 CXXFLAGS="-Wall -O2 -g --std=c++11"
 export CFLAGS CXXFLAGS
-./configure --enable-usbdebug --enable-rangecheck
+./configure --enable-rangecheck
